--- a/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
@@ -130,7 +130,7 @@
                                     <div class="form-group">
                                         <label>
                                             Account Number
-                                        </label><span style="color: red">*</span>
+                                        </label>@*<span style="color: red">*</span>*@
                                         @if (Model.AccountNo == null || Model.AccountNo == "" || Model.IsVerified == "False")
                                         {
                                             @Html.TextBoxFor(m => m.AccountNo, new { @class = "form-control", @placeholder = "Account Number", @onkeypress = "return isNumberKey(event);" })
@@ -146,7 +146,7 @@
                                     <div class="form-group">
                                         <label>
                                             IFSC Code
-                                        </label><span style="color: red">*</span>
+                                        </label>@*<span style="color: red">*</span>*@
                                         @if (Model.IFSCCode == null || Model.IFSCCode == "" || Model.IsVerified == "False")
                                         {
                                             @Html.TextBoxFor(m => m.IFSCCode, new { @class = "form-control", @placeholder = "IFSC Code", @onchange = "return GetBankDetails();" })
@@ -161,7 +161,7 @@
                                     <div class="form-group ">
                                         <label>
                                             Bank Name
-                                        </label><span style="color: red">*</span>
+                                        </label>@*<span style="color: red">*</span>*@
                                         @if (Model.BankName == null || Model.BankName == "" || Model.IsVerified == "False")
                                         {
                                             @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name" })
@@ -175,7 +175,7 @@
 
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label>Branch Name</label><span style="color: red">*</span>
+                                        <label>Branch Name</label>@*<span style="color: red">*</span>*@
                                         @if (Model.BranchName == null || Model.BranchName == "" || Model.IsVerified == "False")
                                         {
                                             @Html.TextBoxFor(m => m.BranchName, new { @class = "form-control", @placeholder = "Branch Name" })
@@ -230,7 +230,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label>UPI ID</label>
+                                        <label>UPI ID</label><span style="color: red">*</span>
                                         @if (Model.UPIID == null || Model.UPIID == "" || Model.IsVerified == "False")
                                         {
                                             @Html.TextBoxFor(m => m.UPIID, new { @class = "form-control", @placeholder = "UPI ID" })
@@ -310,26 +310,26 @@
                 //    return false;
                 //}
 
-                if ($('#AccountNo').val() == '') {
-                    $("#AccountNo").addClass('errortext');
-                    $('#AccountNo').focus();
-                    return false;
-                }
-                if ($('#IFSCCode').val() == '') {
-                    $("#IFSCCode").addClass('errortext');
-                    $('#IFSCCode').focus();
-                    return false;
-                }
-                if ($('#BankName').val() == '') {
-                    $("#BankName").addClass('errortext');
-                    $('#BankName').focus();
-                    return false;
-                }
-                if ($('#BranchName').val() == '') {
-                    $("#BranchName").addClass('errortext');
-                    $('#BranchName').focus();
-                    return false;
-                }
+                //if ($('#AccountNo').val() == '') {
+                //    $("#AccountNo").addClass('errortext');
+                //    $('#AccountNo').focus();
+                //    return false;
+                //}
+                //if ($('#IFSCCode').val() == '') {
+                //    $("#IFSCCode").addClass('errortext');
+                //    $('#IFSCCode').focus();
+                //    return false;
+                //}
+                //if ($('#BankName').val() == '') {
+                //    $("#BankName").addClass('errortext');
+                //    $('#BankName').focus();
+                //    return false;
+                //}
+                //if ($('#BranchName').val() == '') {
+                //    $("#BranchName").addClass('errortext');
+                //    $('#BranchName').focus();
+                //    return false;
+                //}
                 if ($('#NomineeName').val() == '') {
                     $("#NomineeName").addClass('errortext');
                     $('#NomineeName').focus();
@@ -345,11 +345,11 @@
                     $('#NomineeRelation').focus();
                     return false;
                 }
-                //if ($('#UPIID').val() == '') {
-                //    $("#UPIID").addClass('errortext');
-                //    $('#UPIID').focus();
-                //    return false;
-                //}
+                if ($('#UPIID').val() == '') {
+                    $("#UPIID").addClass('errortext');
+                    $('#UPIID').focus();
+                    return false;
+                }
             }
             function GetBankDetails() {
                 debugger;
