--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -574,60 +574,66 @@
                                                 <h4 class="text-black fs-20 mb-0">Recent Contacts</h4>
                                                 <a href="javascript:void(0);" class="btn-link">View more</a>
                                             </div>
-                                            @*<div class="items">
-                                                <div class="text-center">
-                                                    <img class="mb-3 rounded" src="@ViewBag.ProfilePic" alt="" height="150">
-                                                    <h6 class="text-black mb-0">@ViewBag.CustomerName</h6>
-                                                    <b style="font-size:small; display:none;">Contact Address<br /></b>
-                                                    <span style="font-weight:bold;font-size:0.8rem;">@ViewBag.CustomerId</span>
-                                                </div>
-                                            </div>*@
+                                          @if (Model.lstCustomer != null)
+                                          {
                                                 <div class="testimonial-one px-4 owl-right-nav owl-carousel owl-loaded owl-drag">
+                                                        @foreach (var item in Model.lstCustomer)
+                                                        {
+                                                            int i = 0;
+                                                            <div class="items">
+                                                                <div class="text-center" id="forsearchcontact">
+                                                                    <img class="mb-3 rounded" src="@item.ProfilePic" alt="" height="150">
+                                                                    <h6 class="text-black mb-0">@item.CustomerName</h6>
+                                                                    <b style="font-size:small;">Contact Address<br /></b>
+                                                                    <span style="font-weight:bold;font-size:0.8rem;">@item.CustomerId</span>
+                                                                </div>
+                                                            </div>
+                                                            i++;
+                                                        }
+                                                        @*<img src="~/UploadFile/60cd7ff8-4b09-4b8e-b87a-470c88f6541f.png" />*@
+
+                                                        @*<div class="items">
+                                                                <div class="text-center">
+                                                                    <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
+                                                                    <h5 class="text-black mb-0">Cindy</h5>
+                                                                    <span class="fs-12">cindyss</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="items">
+                                                                <div class="text-center">
+                                                                    <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
+                                                                    <h5 class="text-black mb-0">David</h5>
+                                                                    <span class="fs-12">davidxc</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="items">
+                                                                <div class="text-center">
+                                                                    <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
+                                                                    <h5 class="text-black mb-0">Martha</h5>
+                                                                    <span class="fs-12">marthaa</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="items">
+                                                                <div class="text-center">
+                                                                    <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
+                                                                    <h5 class="text-black mb-0">Olivia</h5>
+                                                                    <span class="fs-12">oliv62</span>
+                                                                </div>
+                                                            </div>*@
                                                     
-                                                    @foreach (var item in Model.lstCustomer)
-                                                    {
-                                                        int i = 0;
-                                                        <div class="items">
-                                                            <div class="text-center" id="forsearchcontact">
-                                                                <img class="mb-3 rounded" src="@item.ProfilePic" alt="" height="150">
-                                                                <h6 class="text-black mb-0">@item.CustomerName</h6>
-                                                                <b style="font-size:small;">Contact Address<br /></b>
-                                                                <span style="font-weight:bold;font-size:0.8rem;">@item.CustomerId</span>
-                                                            </div>
-                                                        </div>
-                                                        i++;
-                                                    }
-                                                    @*<img src="~/UploadFile/60cd7ff8-4b09-4b8e-b87a-470c88f6541f.png" />*@
-                                                  
-                                                    @*<div class="items">
-                                                            <div class="text-center">
-                                                                <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
-                                                                <h5 class="text-black mb-0">Cindy</h5>
-                                                                <span class="fs-12">cindyss</span>
-                                                            </div>
-                                                        </div>
-                                                        <div class="items">
-                                                            <div class="text-center">
-                                                                <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
-                                                                <h5 class="text-black mb-0">David</h5>
-                                                                <span class="fs-12">davidxc</span>
-                                                            </div>
-                                                        </div>
-                                                        <div class="items">
-                                                            <div class="text-center">
-                                                                <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
-                                                                <h5 class="text-black mb-0">Martha</h5>
-                                                                <span class="fs-12">marthaa</span>
-                                                            </div>
-                                                        </div>
-                                                        <div class="items">
-                                                            <div class="text-center">
-                                                                <img class="mb-3 rounded" src="~/UserPanel/images/MtgCoinPng.png" alt="">
-                                                                <h5 class="text-black mb-0">Olivia</h5>
-                                                                <span class="fs-12">oliv62</span>
-                                                            </div>
-                                                        </div>*@
                                                 </div>
+                                          }
+                                          else
+                                          {
+                                            <div class="items">
+                                                    <div class="text-center">
+                                                        <img class="mb-3 rounded" src="@ViewBag.ProfilePic" alt="" height="150">
+                                                        <h6 class="text-black mb-0">@ViewBag.CustomerName</h6>
+                                                        <b style="font-size:small;">Contact Address<br /></b>
+                                                        <span style="font-weight:bold;font-size:0.8rem;">@ViewBag.CustomerId</span>
+                                                    </div>
+                                                </div>
+                                          }
 
 
                                             <div class="amount-bx">
