--- a/MyTradeMTG/UserPanel/css/style.css
+++ b/MyTradeMTG/UserPanel/css/style.css
@@ -48987,3 +48987,18 @@ $color_pallate_15: #ed0b4c; */
     {
         margin-right:13px;
     }
+
+    .float_button{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:30px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
