--- a/MyTradeMTG/Views/User/SaleRequest.cshtml
+++ b/MyTradeMTG/Views/User/SaleRequest.cshtml
@@ -226,8 +226,8 @@
                                         <div class="modal-footer">
                                             @*<button class="btn btn-danger btn-sm" data-dismiss="modal"><i class="flaticon-cancel-12"></i>Cancel</button>*@
                                             @*<button type="submit" class="btn btn-primary btn-sm" onclick="return SaveSaleRequest();">Save</button>*@
-                                            <button type="submit" class="btn btn-primary btn-sm" onclick="return ApproveSaleRequest();" id="btnapprove" value="Approved">Approve</button>
-                                            <button type="submit" id="btnReject" name="btnReject" class="btn btn-danger btn-sm" onclick="return RejectSaleRequest();" value="Rejected">Reject</button>
+                                            <input type="submit" class="btn btn-primary btn-sm" onclick="return ApproveSaleRequest();" id="btnapprove" value="Approve"/>
+                                            <input type="submit" id="btnReject" name="btnReject" class="btn btn-danger btn-sm" onclick="return RejectSaleRequest();" value="Rejected"/>
 
                                         </div>
                                     </div>
@@ -537,12 +537,12 @@
             return false;
         }
 
-        if ($("#BranchName").val() == "") {
-            $("#BranchName").addClass('errortext');
-            $('#BranchName').focus();
-            $("#BranchName").val('');
-            return false;
-        }
+        //if ($("#BranchName").val() == "") {
+        //    $("#BranchName").addClass('errortext');
+        //    $('#BranchName').focus();
+        //    $("#BranchName").val('');
+        //    return false;
+        //}
         if ($("#Trasaction").val() == "") {
             $("#Trasaction").addClass('errortext');
             $('#Trasaction').focus();
