--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -515,7 +515,7 @@
                                             <div class="col-md-12">
                                                 <div class="row">
                                                     <div class="col-md-4">
-                                                        <label>From</label>
+                                                        <label>From Currency Code</label>
                                                         <input type="hidden" id="PerAmtnt" name="PerAmtnt" value="1" />
                                                         @*<select id="from1" class="form-control" onchange="return CurrencyStatictics()">
                                                             <option value="0">Select USD</option>
@@ -529,7 +529,7 @@
                                                         @Html.DropDownListFor(m => m.from1, new SelectList(ViewBag.ddlCurrencyISoCode, "Value", "Text"), new { @class = "form-control", onchange = "return CurrencyStatictics()" })
                                                     </div>
                                                     <div class="col-md-4">
-                                                        <label>To</label>
+                                                        <label>To Currency Code</label>
                                                         <input type="hidden" id="IndianValue22" name="IndianValue22" />
                                                         @*<select id="to1" onchange="return CurrencyStatictics()" class="form-control">
                                                             <option value="0">Select Currency Code</option>
