--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -201,8 +201,10 @@
                                         <span class="text-black">@ViewBag.LevelIncomeTr1</span>&nbsp;&nbsp;&nbsp;
                                         <span class="text-danger pr-2">TR2- </span>
                                         <span class="text-black">@ViewBag.LevelIncomeTr2</span><br />
-                                        <span class="text-danger pr-2">Bet(SB)- </span>
-                                        <span class="text-black">@ViewBag.SponsorBonus</span><br />
+                                        <span class="text-danger pr-2">SB- </span>
+                                        <span class="text-black">@ViewBag.SponsorBonus</span>&nbsp;&nbsp;&nbsp;
+                                        <span class="text-danger pr-2">Bet- </span>
+                                        <span class="text-black">0.00</span><br />
                                     </div>
                                 </div>
                                 <div class="card-body p-0">
@@ -385,8 +387,9 @@
                                                     <a href="javascript:void(0);" class="btn btn-primary light btn-rounded"><i class="las la-download scale5 me-2"></i>Get Report</a>
                                                 </div>*@
                                         </div>
-                                        <div id="chartBarRunning2" class="bar-chart"></div>
                                         <div id="chartBarRunning" class="bar-chart"></div>
+                                        <div id="chartBarRunning2" class="bar-chart"></div>
+                                      
                                     </div>
                                     @*<div class="tab-pane fade" id="Week">
                                             <div class="row">
