--- a/MyTradeMTG/Views/User/UserDashBoard.cshtml
+++ b/MyTradeMTG/Views/User/UserDashBoard.cshtml
@@ -388,7 +388,7 @@
                                                 </div>*@
                                         </div>
                                         <div id="chartBarRunning" class="bar-chart"></div>
-                                        <div id="chartBarRunning2" class="bar-chart"></div>
+                                        @*<div id="chartBarRunning2" class="bar-chart"></div>*@
                                       
                                     </div>
                                     @*<div class="tab-pane fade" id="Week">
