--- a/MyTradeMTG/MyTradeMTGWebsite/asset/css/popup.css
+++ b/MyTradeMTG/MyTradeMTGWebsite/asset/css/popup.css
@@ -1,4 +1,17 @@
-
+.form-control:focus
+{
+	background: transparent !important;
+	color: #fff;
+}
+.form-control
+{
+	background: transparent;
+	color: #fff;
+}
+.iti__country-name
+{
+	color:#000;
+}
 #lean_overlay {
     position: fixed;
     z-index:100;
@@ -16,7 +29,7 @@
 	height: auto;
 	left:45%;
 	top:80px;
-	background: #0e1934;
+	background: #FFF;
 }
 
 #modal_trigger {}
@@ -81,7 +94,7 @@ a.btn_red {color: #FFF;}
 .popupHeader {background:#0f1b39; position:relative; padding:10px 20px; border-bottom:1px solid rgba(255,255,255,0.1); font-weight:bold;}
 .popupHeader .modal_close {position: absolute; right: 0; top:0; padding:10px 15px; background:#0f1b39; cursor: pointer; color:#aaa; font-size:16px;}
 
-.popupBody {padding:20px;padding-top: 10px;background:#0f1b39;}
+.popupBody {padding:20px;background:#0f1b39;}
 
 
 /* Social Login Form */
@@ -118,27 +131,13 @@ a.btn_red {color: #FFF;}
 /* User Login Form */
 .user_login {display: none;}
 .user_login label {display: block; margin-bottom:5px;}
-.user_login input[type="text"], .user_login input[type="email"], .user_login input[type="password"] {display: block; width:100%;border-radius: 50px; padding: 10px; border:1px solid #DDD; color:#000;}
+.user_login input[type="text"], .user_login input[type="email"], .user_login input[type="password"] {display: block; width:90%; padding: 10px; border:1px solid #DDD; color:#fff;}
 .user_login input[type="checkbox"] {float:left; margin-right:5px;}
 .user_login input[type="checkbox"]+label {float:left;}
 .user_login input {
 	background: none;
 	border: 1px solid rgba(255,255,255,0.2) !important;
 }
-
-/* forget form */
-
-/* User Login Form */
-/*.user_login {display: none;}*/
-.forget_form label {display: block; margin-bottom:5px;}
-.forget_form input[type="text"], .forget_form input[type="email"], .forget_form input[type="password"] {display: block;border-radius: 50px; width:100%; padding: 10px; border:1px solid #DDD; color:#fff;}
-.forget_form input[type="checkbox"] {float:left; margin-right:5px;}
-.forget_form input[type="checkbox"]+label {float:left;}
-.forget_form input {
-	background: none;
-	border: 1px solid rgba(255,255,255,0.2) !important;
-}
-
 .user_login .checkbox {margin-bottom: 10px; clear: both; overflow: hidden;}
 .forgot_password {display:block; margin: 20px 0 10px; clear: both; overflow: hidden; text-decoration: none; color:#fff;}
 .forgot_password:hover {color:#ffd234;}
@@ -146,7 +145,7 @@ a.btn_red {color: #FFF;}
 /* User Register Form */
 .user_register {display: none;}
 .user_register label {display: block; margin-bottom:5px;}
-.user_register input[type="text"], .user_register input[type="email"], .user_register input[type="tel"], .user_register input[type="number"], .user_register select, .user_register input[type="password"] {display: block; width:100%;background:transparent; padding: 8px; padding-left:15px; border-radius:50px; color:#fff;}
+.user_register input[type="text"], .user_register input[type="email"], .user_register input[type="password"] {display: block; width:90%; padding: 10px; border:1px solid #DDD; color:#fff;}
 .user_register input[type="checkbox"] {float:left; margin-right:5px;}
 .user_register input[type="checkbox"]+label {float:left;}
 .user_register input {
@@ -154,7 +153,3 @@ a.btn_red {color: #FFF;}
 	border: 1px solid rgba(255,255,255,0.2) !important;
 }
 .user_register .checkbox {margin-bottom: 10px; clear: both; overflow: hidden;}
-
-option{
-    color:#000 !important;
-}
