--- a/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
+++ b/MyTradeMTG/Views/Shared/Website_LayoutPage.cshtml
@@ -9,8 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <!-- SITE TITLE -->
-    <title>My Trade</title>
     <!-- Latest Bootstrap min CSS -->
     <link rel="stylesheet" href="~/MyTradeMTGWebsite/asset/bootstrap/css/bootstrap.min.css">
     <!-- Google Font -->
@@ -90,7 +88,7 @@
                                         <li><a href="#faq" role="menuitem">faq</a></li>
                                         <li><a href="#download" role="menuitem">Get App</a></li>
                                         <li><a href="#contact" role="menuitem">Contact Us</a></li>
-                                        <li><a href="#" class="block-menu" id="modal_trigger">Login</a></li>
+                                        <li><a href="#" class="block-menu" data-toggle="modal" data-target="#modal">Login</a></li>
 
                                     </ul>
                                 </nav>
@@ -265,6 +263,8 @@
         </div><!--- END CONTAINER -->
     </div>
     <!-- END FOOTER -->
+
+
     <script src="~/MyTradeMTGWebsite/asset/js/jquery-1.12.4.min.js"></script>
     <script src="~/MyTradeMTGWebsite/asset/bootstrap/js/bootstrap.min.js"></script>
     <!--owl-carousel min js-->
