--- a/MyTradeMTG/Views/Shared/_FranchiseLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_FranchiseLayout.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>@ViewBag.Title</title>
+    <title>Franchise DashBoard</title>
     <link rel="icon" type="image/x-icon" href="/MyTradeMTGWebsite/assets/img/favicon.png" />
     @*<link href="~/assets/css/loader.css" rel="stylesheet" type="text/css" />
         <script src="~/assets/js/loader.js"></script>*@
@@ -85,6 +85,15 @@
         ***********************************-->
         <div class="deznav">
             <div class="deznav-scroll">
+                <ul class="metismenu" id="menu">
+                    <li>
+                        <a class="ai-icon" href="/Franchise/FranchiseDashBoard" aria-expanded="false">
+                            <i class="flaticon-381-networking"></i>
+                            <span class="nav-text">Dashboard</span>
+                        </a>
+                    </li>
+                   
+                </ul>
                 <div class="copyright">
                     <p><strong>My Trade User Dashboard</strong> © 2022 All Rights Reserved.</p>
                 </div>
