--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -625,9 +625,9 @@
                         @*<input id="phone" type="tel" placeholder="Enter Mobile No." maxlength="15" onkeypress="return isNumberKey(event);">*@
 
                         <input name="phone1" type="text" class="form-control mb-2 inptFielsd" id="phone1"
-                               placeholder="Phone Number"  onkeyPress="onKeyCoutry()" />
+                               placeholder="Phone Number"  oninput="onKeyCoutry()" />
                         <input id="country" type="hidden" name="country">
-                        <span style="color:#ffffff" id="country1"></span>
+                        <label style="color:#ffffff" id="country1"></label>
                         
                         
 
