--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -509,7 +509,7 @@
 
 
 <!--START LOGIN-->
-<div id="modal" class="popupContainer" style="position:fixed;z-index:2;opacity: 1;z-index: 1100;left: 50%;margin-left: -165px;
+<div id="modal" class="popupContainer" style="position:fixed;z-index:2;opacity: 1;left: 50%;margin-left: -165px;
     top: 100px;">
     <header class="popupHeader">
         <span class="header_title">Login</span>
